--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,18 @@ flutter:
 
   assets:
   - assets/images/gorilla.jpg
+  - assets/images/aloy1.png
+  - assets/images/aloy2.png
+  - assets/images/hther.jpg
+  - assets/images/nee-san.jpg
+  - assets/images/speed.jpg
+  - assets/images/tunnel.jpg
+  - assets/images/burjer.jpg
+  - assets/images/bxw.jpg
+  - assets/images/ruwoghxy.jpg
+  - assets/images/zamn.png
+  - assets/images/isekai.jpg
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
