--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,19 +60,17 @@ flutter:
   uses-material-design: true
 
   assets:
-  - assets/images/gorilla.jpg
-  - assets/images/aloy1.png
-  - assets/images/aloy2.png
-  - assets/images/hther.jpg
-  - assets/images/nee-san.jpg
-  - assets/images/speed.jpg
-  - assets/images/tunnel.jpg
-  - assets/images/burjer.jpg
-  - assets/images/bxw.jpg
-  - assets/images/ruwoghxy.jpg
-  - assets/images/zamn.png
-  - assets/images/isekai.jpg
-
+  - assets/images/generic-inaul.jpg
+  - assets/images/bailabi.jpg
+  - assets/images/diamond_magnet.jpg
+  - assets/images/kinayupo.jpg
+  - assets/images/lumbayan.jpg
+  - assets/images/pinundutan.jpg
+  - assets/images/sahaya-sandaya.jpg
+  - assets/images/salimpukaw.jpg
+  - assets/images/sambit.jpg
+  - assets/images/siko_karwang.jpg
+  - assets/images/sultan.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
