--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   camera: ^0.11.2
   image_picker: ^1.2.0
+  tflite_flutter: ^0.11.0
+  image: ^4.5.4
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +73,8 @@ flutter:
   - assets/images/sambit.jpg
   - assets/images/siko_karwang.jpg
   - assets/images/sultan.jpg
+  - assets/model/efficientnetlite0_trained_model.h5
+  - assets/model/efficientnetlite0_trained_model.keras
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
