--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,15 +64,25 @@ flutter:
   assets:
   - assets/images/generic-inaul.jpg
   - assets/images/bailabi.jpg
+  - assets/images/binaludan_diamond.jpg
   - assets/images/diamond_magnet.jpg
   - assets/images/kinayupo.jpg
+  - assets/images/kinulipis.jpg
   - assets/images/lumbayan.jpg
+  - assets/images/pakiring.jpg
+  - assets/images/panigabi.jpg
+  - assets/images/pine_tree.jpg
   - assets/images/pinundutan.jpg
   - assets/images/sahaya-sandaya.jpg
   - assets/images/salimpukaw.jpg
   - assets/images/sambit.jpg
   - assets/images/siko_karwang.jpg
+  - assets/images/siku_andun.jpg
   - assets/images/sultan.jpg
+  - assets/images/sunflower.jpg
+  - assets/images/tipas.jpg
+  - assets/model/effi_full.tflite
+  - assets/model/labels.txt
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
